# zurich_bdx_nn

./: .pre-commit-config.yaml  README.md  Zurich_XLSXtoTable_Main.py  config.yaml  example.py  main.py  pyproject.toml  snowpark_test.py
tests/: test_zurich_bdx_accelerator.py
zurich_bdx_accelerator/: __init__.py
zurich_bdx_accelerator/utils/: load_config.py  snowpark_connector.py
zurich_bdx_accelerator/utils/file_handling/: extract_staged_files.py
